<resources>
    <string name="app_name">DataBase</string>
    <string name="buttonSign">Registrarse</string>
    <string name="buttonLogin">Iniciar Sesion</string>
    <string name="buttonMessage">Mensajes COVID</string>
    <string name="buttonGoBack1">Volver</string>
    <string name="buttonGoBack2">Volver</string>
    <string name="buttonGoBack3">Volver</string>
    <string name="txtMessage">Aqui se mostrara su mensaje</string>
    <string name="buttonShow">Mostrar</string>
    <string name="txtName">Nombre</string>
    <string name="txtSurname">Apellidos</string>
    <string name="txtEmail">Correo electronico</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtConfirmPassword">Confirmar constraseña</string>
    <string name="buttonDoSign">Registrarse</string>
    <string name="buttonDoLogin">Iniciar sesion</string>
    <string name="txtLoginEmail">Correo electronico</string>
    <string name="txtLoginPassword">Contraseña</string>
    <string name="buttonSave">Guardar</string>
</resources>