<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity">

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="saveMessage"
        android:text="@string/buttonSave"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoBack3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage"
        app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/buttonGoBack3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:onClick="goBack"
        android:text="@string/buttonGoBack3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtMessage"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="showMessage"
        android:text="@string/buttonShow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoBack3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage"
        app:layout_constraintVertical_bias="0.328" />
</androidx.constraintlayout.widget.ConstraintLayout>